// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cancel render with cancellable false props 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsSize="small"
  bsStyle="default"
  disabled={true}
  onClick={[Function]}
>
  Cancel
</Button>
`;

exports[`Cancel render with cancellable true props 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsSize="small"
  bsStyle="default"
  disabled={false}
  onClick={[Function]}
>
  Cancel
</Button>
`;
